# market-data-core

./: .gitignore  README.md  pyproject.toml
docs/: adjustment_policy.md  architecture.md  calendar_policy.md  canonical_bar_contract.md  consumer_api.md  current_data_flow.md  extraction_rules.md  integration_with_market_regime_classification.md  migration_blueprint.md  module_inventory.md  provider_contract.md  public_api_draft.md  repo_structure.md  storage_layout.md
docs/docs/: migration_blueprint.md
examples/: inspect_dataset_example.py  load_bars_example.py  sample_config.yaml  validate_dataset_example.py
src/market_data_core/: __init__.py
src/market_data_core/access/: __init__.py  datasets.py  load.py  query.py
src/market_data_core/calendar/: __init__.py  checks.py  cn_a.py  sessions.py
src/market_data_core/clean/: __init__.py  dedupe.py  missing.py  normalize.py  outliers.py  quality_flags.py
src/market_data_core/cli/: main.py
src/market_data_core/config/: __init__.py  paths.py  settings.py
src/market_data_core/core/: __init__.py  enums.py  (+3 more)
tests/: test_integration_readiness.py  test_package_import.py
tests/access/: test_datasets.py  test_load_bars.py
tests/calendar/: test_sessions.py
tests/clean/: test_normalize.py
tests/core/: test_enums.py  test_provider_registry.py
tests/providers/: test_baostock_integration.py  test_baostock_live_smoke.py  test_baostock_mapper.py
tests/schema/: test_bar_schema_constants.py
tests/storage/: test_layout_contract.py  test_manifests.py  test_parquet_store.py
tests/validation/: test_validate_bars.py
(+39 files in other folders)
