[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-core"
version = "0.1.0"
description = "Core market-data contracts and reusable access layer scaffolding."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "market-data-core maintainers" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
market-data-core = "market_data_core.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
